--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.19",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "multer": "^2.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
